# zipnerf-pytorch

./: README.md  pyproject.toml
zipnerf_ns/: __init__.py  zipnerf_config.py  zipnerf_datamanager.py  zipnerf_field.py  zipnerf_model.py
