[project]
name = "zipnerf"
description = "Zipnerf plugin for creating and registering zipnerf in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["zipnerf_ns*","internal*","gridencoder*","extensions*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
zipnerf_ns = 'zipnerf_ns.zipnerf_config:zipnerf_method'